--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "edilson/word-changes-tracker",
-    "description": "Word changes trucker.",
+    "description": "Word changes tracker.",
     "keywords": [
         "changes tracker",
         "composer",
