--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": ">=7.1"
     },
+    "minimum-stability": "stable",
     "require-dev": {
         "phpunit/phpunit": "6.*"
     },
