--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,7 @@
         }
     ],
     "type": "library",
-    "require": {
-        "php": ">=7.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "6.*"
-    },
+    "require": {},
     "autoload": {
         "psr-4": {
             "EdilsonMucanze\\WordChangesTracker\\": "src/"
