--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "type": "library",
+    "minimum-stability": "stable",
     "require": {},
     "autoload": {
         "psr-4": {
